Changed the way the menu visibility is controlled on mobile to prevent it flickering as you navigate round

--- a/themes/NZTheme/static/css/mobile.css
+++ b/themes/NZTheme/static/css/mobile.css
@@ -73,6 +73,7 @@ a:visited { }
 }
 
 .left-col {
+    display: none;
     float: none;
     width: initial;
     height: initial;
